UPDATE : FIXED OVERFLOW

--- a/mediaQueries.css
+++ b/mediaQueries.css
@@ -919,6 +919,9 @@ height: 55vh;
   {
     height: 110vh;
   }
+  .contactUs-content {
+    height: 70vh;
+}
 }
 
   
